# Noises

./: CMakeLists.txt  discord_suggesttions.txt  plan.md  readme.md  thread_debug.sh  web_build.sh
cmake/: build_info.hpp  build_number.cmake  generate_build_info.cmake
noises/: interpolation.hpp  perlin.cpp  perlin.hpp
noises/noises/: noises.hpp
visual/: allegro_util.cpp  allegro_util.hpp  build_number.h  flecs_incl.hpp  gui.cpp  gui.hpp  log.hpp  main.cpp  math.hpp  render.cpp  render.hpp  stop.cpp  util.hpp
visual/app/: init.cpp  init.hpp  runtime.hpp  stop.hpp
visual/ecs/: camera_module.cpp  camera_module.hpp  display_module.cpp  display_module.hpp  gui_module.cpp  gui_module.hpp  render_module.cpp  render_module.hpp  texture_generation_module.cpp  texture_generation_module.hpp  texture_inspection_module.cpp  texture_inspection_module.hpp  util.hpp
visual/ecs/texture_generation/: interpolation_generation.cpp  interpolation_generation.hpp  perlin_generation.cpp  perlin_generation.hpp  white_noise_generation.cpp  white_noise_generation.hpp
visual/gui/: gui.cpp  gui.hpp  menu.cpp  menu.hpp
visual/math/: box2.hpp  vec2.hpp  vec3.hpp
visual/render/: drawable_bitmap.hpp  noise_texture.cpp  noise_texture.hpp  render.cpp
